--- a/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
+++ b/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
@@ -40,23 +40,11 @@
     build_executors.each do |build_executor|
   %>
   <tr>
-    <!-- <td class="pane" <% if build_executor.percentage_left != 0 then %>rowspan="2"<% end %>> -->
-    <td class="pane" rowspan="2">
+    <td class="pane" <% if build_executor.percentage_left != 0 then %>rowspan="2"<% end %>>
       #<%= build_executor.index+1 %></td>
     <td class="pane" width="70%"><%= build_executor.status_message %></td>
     <td class="pane">&nbsp;</td>
   </tr>
-    <tr>
-      <td class="pane">
-        <table width="100%" class="progress-bar">
-          <tr>
-            <td width="33" class="progress-bar-done">&nbsp;</td>
-            <td width="66" class="progress-bar-left">&nbsp;</td>
-          </tr>
-        </table>
-          &nbsp;
-      </td class="pane">
-    </tr>
   <% if build_executor.percentage_left != 0 then %>
     <tr>
       <td class="pane">
