o Refactored the codebase to use new Space and Clock. o Removed several time/sync classes that were used for the old mechanism. o Refactored tests to use more mocks instead od relying on other classes.

--- a/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
+++ b/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
@@ -43,7 +43,7 @@
     <td class="pane" <% if build_executor.percentage_left != 0 then %>rowspan="2"<% end %>>
       #<%= build_executor.index+1 %></td>
     <td class="pane" width="70%"><%= build_executor.status_message %></td>
-    <td class="pane">&nbsp;</td>
+    <td class="pane"><%= build_executor.percentage_left %>&nbsp;</td>
   </tr>
   <% if build_executor.percentage_left != 0 then %>
     <tr>
