--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -2,13 +2,7 @@
 <table width="100%">
   <tr>
     <td class="setting-name">CVSROOT</td>
-    <% 
-      # Hackish/Neat trick:
-      # the inspect will convert backslashes to double backslashes and do all sorts of nice things
-      # it will also add " " around the string so it is not needed in the actual html
-      cvsroot_attrib_value = project_config['cvsroot'] ? project_config['cvsroot'].inspect : "\"\""
-    %>
-    <td width="75%"><input class="setting-input" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value=<%=  cvsroot_attrib_value %>></td>
+    <td width="75%"><input class="setting-input" name="cvsroot" id="cvsroot" onKeyUp="distributeCvsrootFields()" type="text" value="<%=  cvsroot %>"></td>
   </tr>
   <tr>
     <td>Protocol</td>
@@ -27,7 +21,7 @@
   </tr>
   <tr>
     <td>Password</td>
-    <td><input class="setting-input" name="cvspassword" id="cvspassword" value="<%= project_config['cvspassword'] %>" type="password"></td>
+    <td><input class="setting-input" name="cvspassword" id="cvspassword" value="<%= cvspassword %>" type="password"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
@@ -57,15 +51,11 @@
   </tr>
   <tr>
     <td>Module</td>
-    <td><input class="setting-input" name="cvsmodule" id="cvsmodule" type="text" value="<%= project_config['cvsmodule'] %>"></td>
-  </tr>
-  <tr>
-    <td>ViewCVS/Fisheye base URL</td>
-    <td><input class="setting-input" name="cvs_web_url" id="cvs_web_url" type="text" value="<%= project_config['cvs_web_url'] %>"></td>
+    <td><input class="setting-input" name="cvsmodule" id="cvsmodule" type="text" value="<%= cvsmodule %>"></td>
   </tr>
   <tr>
     <td class="setting-name">RSH client</td>
-    <td><input class="setting-input" name="rsh_client" id="cvs_web_url" type="text" value="<%= project_config['rsh_client'] %>"></td>
+    <td><input class="setting-input" name="rsh_client" id="cvs_web_url" type="text" value="<%= rsh_client %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
