renamed cvs_web_url to scm_web_url

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -61,7 +61,7 @@ function showScm(scm) {
 
 <tr>
   <td>ViewCVS/Fisheye URL</td>
-  <td><input class="setting-input" name="cvs_web_url" id="cvs_web_url" type="text" value="<%= project_config['cvs_web_url'] %>"></td>
+  <td><input class="setting-input" name="scm_web_url" id="scm_web_url" type="text" value="<%= project_config['scm_web_url'] %>"></td>
 </tr>
 <tr>
   <td>&nbsp;</td>
