--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -36,7 +36,13 @@ function showScm(scm) {
 <table width="100%">
 <tr>
   <td class="setting-name">Project name</td>
-  <td width="75%"><input class="setting-input" name="project_name" type="text" value="<%= project_name %>"/></td>
+  <td width="75%">
+    <% if project_exists? %>
+      <%= project_name %>
+    <% else %>
+      <input class="setting-input" name="project_name" type="text" value="<%= project_name %>"/>
+    <% end %>
+  </td>
 </tr>
 <tr>
   <% 
