--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -42,10 +42,10 @@
   </td>
 </tr>
 </table>
-<table id="main-table" width="100%" border="0">
+<table id="main-table" width="100%" height="70%" border="0">
 <tr>
 
-<td id="side-panel">
+<td id="side-panel" width="20%">
 <%
 tasks = self.tasks
 if(tasks && tasks.length > 0)
@@ -68,7 +68,7 @@ if(navigation)
 
 </td>
 
-<td id="main-panel">
+<td id="main-panel" width="80%" height="100%">
 <%= body %>
 </td>
 
