--- a/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
+++ b/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
@@ -32,7 +32,7 @@
     Build Executor Status
   </td></tr>
   <tr>
-    <th class="pane"></th>
+    <th class="pane">Name</th>
     <th class="pane">Status</th>
     <th class="pane">&nbsp;</th>
   </tr>
@@ -41,7 +41,7 @@
   %>
   <tr>
     <td class="pane" <% if build_executor.percentage_left != 0 then %>rowspan="2"<% end %>>
-      #<%= build_executor.index+1 %></td>
+      <%= build_executor.name %></td>
     <td class="pane" width="70%"><%= build_executor.status_message %></td>
     <td class="pane">&nbsp;</td>
   </tr>
@@ -57,7 +57,7 @@
           &nbsp;
       </td class="pane">
       <% if build_executor.build_process_executing? && private? then %>
-        <td class="pane"><a href="?action=kill_executor&executor=<%= build_executor.id %>"><img width="24" height="24" src="icons/stop.png" /></a></td>
+        <td class="pane"><a href="?action=kill_executor&executor=<%= build_executor.name %>"><img width="24" height="24" src="icons/stop.png" /></a></td>
       <% end %>
     </tr>
     <% end %>
