--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -7,6 +7,6 @@
   </tr>
   <tr>
     <td class="config_cell">Directory</td>
-    <td><input class="scm_info" name="svnprefix" id="svnprefix" type="text" value="<%= svnprefix %>"></td>
+    <td><input class="scm_info" name="svnprefix" id="svnpath" type="text" value="<%= svnpath %>"></td>
   </tr>
 </table>
