--- a/trunk/server/damagecontrol/web/components/global_search_form.erb
+++ b/trunk/server/damagecontrol/web/components/global_search_form.erb
@@ -1,5 +1,5 @@
 <form action="search"><div id="searchform">
-  <img width="24" height="24" src="icons/find.png"/> 
+  <img width="24" height="24" src="largeicons/find.png"/> 
   <b>Search:</b>
   <input name="search" size="12" value="<%= request.query['search'] %>"/>
   <input type="submit" value="Go"/> &nbsp;
