--- a/trunk/server/damagecontrol/web/components/project_status.erb
+++ b/trunk/server/damagecontrol/web/components/project_status.erb
@@ -17,8 +17,8 @@ project_statuses.each do |project|
     <td><%= project.last_duration %></td>
     <% if private? %>
     <td align="center" style="border-left: 1px solid #bbb; color: #bbb;"> <a href="configure?project_name=<%= project.name %>&action=configur
-e" title="Configure <%= project.name %>"><img src="icons/wrench.png" width="24" height="24"/></a>
-        | <a href="project?project_name=<%= project.name %>&action=trig_build" title="Trigger build for <%= project.name %>"><img src="icons/gears_run.png
+e" title="Configure <%= project.name %>"><img src="largeicons/wrench.png" width="24" height="24"/></a>
+        | <a href="project?project_name=<%= project.name %>&action=trig_build" title="Trigger build for <%= project.name %>"><img src="largeicons/gears_run.png
 " width="24" height="24"/></a></td>
     <% else %>
        <td>&nbsp;</td>
