o The various SCM methods take checkout_dir as a parameter - DC-249 o Added uptodate? and label to SCM (label used for optional labeling of builds) o Minor adjustments to the windows installer o Fixed broken STOP icon o Added new_mock to MockIt - for JMock like automatic verification o Some other small changes

--- a/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
+++ b/trunk/server/damagecontrol/web/components/build_scheduler_status.erb
@@ -57,7 +57,7 @@
           &nbsp;
       </td class="pane">
       <% if build_executor.build_process_executing? && private? then %>
-        <td class="pane"><a href="?action=kill_executor&executor=<%= build_executor.name %>"><img width="24" height="24" src="icons/stop.png" /></a></td>
+        <td class="pane"><a href="?action=kill_executor&executor=<%= build_executor.name %>"><img width="24" height="24" src="largeicons/stop.png" /></a></td>
       <% end %>
     </tr>
     <% end %>
