--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -9,4 +9,12 @@
     <td class="config_cell">Directory</td>
     <td><input class="scm_info" name="svnpath" id="svnpath" type="text" value="<%= svnpath %>"></td>
   </tr>
+  <tr>
+    <td>&nbsp;</td>
+    <td class="setting-description">
+      This is the relative path from the start of the repository to the end of the URL. Example:
+      if your URL is svn://your.server/path/to/repository/path/within/repository then this value
+      should be path/within/repository
+    </td>
+  </tr>
 </table>
