o Applied DC-270 from Andrew Eland. Nice! o Added icons for cvs/svn so it looks nice behind firewalls

--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -1,4 +1,4 @@
-<img src="http://www.wincvs.org/cvs.png"/>
+<img src="largeicons/cvs.png"/>
 <table width="100%">
   <tr>
     <td class="setting-name">CVSROOT</td>
