--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -1,4 +1,4 @@
-<img src="http://subversion.tigris.org/subversion_logo-200x173.png" height="62" width="54"/>
+<img src="largeicons/svnlogo64.png"/>
 <table>
   <tr>
     <td class="config_cell">Base url</td>
