get those images right

--- a/trunk/server/damagecontrol/scm/cvs_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/cvs_configure_form.erb
@@ -1,4 +1,4 @@
-<img src="largeicons/cvs.png"/>
+<img src="images/cvs.png"/>
 <table width="100%">
   <tr>
     <td class="setting-name">CVSROOT</td>
