--- a/trunk/server/damagecontrol/scm/svn_configure_form.erb
+++ b/trunk/server/damagecontrol/scm/svn_configure_form.erb
@@ -1,12 +1,12 @@
 <img src="images/svnlogo64.png"/>
-<table>
+<table width="100%">
   <tr>
-    <td class="config_cell">Base url</td>
-    <td><input class="scm_info" name="svnurl" id="svnurl" type="text" value="<%= svnurl %>"></td>
+    <td class="config_cell">Url</td>
+    <td width="75%"><input class="setting-input" name="svnurl" id="svnurl" type="text" value="<%= svnurl %>"></td>
   </tr>
   <tr>
     <td class="config_cell">Directory</td>
-    <td><input class="scm_info" name="svnpath" id="svnpath" type="text" value="<%= svnpath %>"></td>
+    <td><input class="setting-input" name="svnpath" id="svnpath" type="text" value="<%= svnpath %>"></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
