--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -22,6 +22,8 @@
 <tr id="top-panel">
 <td>
 <a href="dashboard"><img class="logo" src="images/damagecontrol-logo.gif"/></a>
+<br>
+<a href="http://www.thoughtworks.com/"><img class="logo" src="images/tw-logo.gif"/></a>
 </td>
 <td align="right" valign="bottom" style="vertical-align: bottom;"><%= search_form %></td>
 </tr>
