o Factored CheckoutManager out of SCMPoller and BuildExecutor o Simplified SCM API - checkout now returns changesets o Added a TW logo o Added some more cygwin utils (useful for debugging) o Removed some dead code o Now using SCM UTC times for checkin (last commit time is stored in project config)

--- a/trunk/server/damagecontrol/web/configure.erb
+++ b/trunk/server/damagecontrol/web/configure.erb
@@ -69,6 +69,12 @@ function showScm(scm) {
   <td class="setting-name">JIRA url</td>
   <td><input class="setting-input" name="jira_url" id="jira_url" type="text" value="<%= project_config['jira_url'] %>"/></td>
 </tr>
+<tr>
+  <td>&nbsp;</td>
+  <td class="setting-description">
+    The JIRA URL is the URL to the JIRA installation. (And not the URL to the JIRA project).
+  </td>
+</tr>
 
 <tr>
   <td>ViewCVS/Fisheye URL</td>
