Reintroduced CHECKING_OUT.

--- a/trunk/server/damagecontrol/web/decorators/default.erb
+++ b/trunk/server/damagecontrol/web/decorators/default.erb
@@ -21,7 +21,7 @@
 
 <tr id="top-panel">
 <td>
-<a href="dashboard"><img class="logo" src="images/damagecontrol-logo.gif"/></a>
+<a href="http://damagecontrol.codehaus.org/"><img class="logo" src="images/damagecontrol-logo.gif"/></a>
 </td>
 <td align="right" valign="bottom" style="vertical-align: bottom;">
 <a href="http://www.thoughtworks.com/"><img class="logo" src="images/tw-logo.png"/></a>
